--- a/your-code/challenge-1.ipynb
+++ b/your-code/challenge-1.ipynb
@@ -66,7 +66,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import re\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from bs4 import BeautifulSoup\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +99,39 @@
     "\n",
     "    Returns:\n",
     "        A string that has been cleaned up.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    clean_s = s\n",
+    "    clean_s = clean_s.lower()\n",
+    "    clean_s = re.sub(r'(http|https|ftp|ssh)://([\\w_-]+(?:(?:\\.[\\w_-]+)+))([\\w.,@?^=%&:/~+#-]*[\\w@?^=%&/~+#-])?', ' ' , clean_s) \n",
+    "    clean_s = BeautifulSoup(clean_s, 'lxml').get_text().strip()\n",
+    "    clean_s = re.sub(r'\\W+',' ',clean_s) # Replace everything non-alphanumeric by ' '\n",
+    "    clean_s = re.sub(r'\\s+',' ',clean_s) # Replace one or more whitespaces by  ' '\n",
+    "    clean_s = re.sub(r'\\d+',' ',clean_s) # Replace one or more digits by  ' '\n",
+    "    \n",
+    "    \n",
+    "    return clean_s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' ironhack s q website   is   '"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = '''@Ironhack's-#Q website 776-is http://ironhack.com [(2018)]\")'''\n",
+    "clean_string = clean_up(string)\n",
+    "clean_string "
    ]
   },
   {
@@ -101,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +166,32 @@
     "\n",
     "    Returns:\n",
     "        A list of words as the result of tokenization.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    string_list = s.split(' ')\n",
+    "    filtered = [x for x in string_list if x!='' ]\n",
+    "            \n",
+    "    return filtered"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 's', 'q', 'website', 'is']"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token_string = tokenize(clean_string)\n",
+    "token_string "
    ]
   },
   {
@@ -145,7 +222,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wordfreq = {} # A dictionary to hold as keys every single word, and the value is how many times appears the word.\n",
+    "for sentence in token_string:\n",
+    "    words = sentence.split() # List of words in a given review.\n",
+    "    #tokens = nltk.word_tokenize(sentence) # To get the words, it can be also done with sentence.split()\n",
+    "    for word in words:\n",
+    "        if ( word not in wordfreq.keys() ):\n",
+    "            wordfreq[word] = 1 # We initialize the corresponding counter\n",
+    "        else:\n",
+    "            wordfreq[word] += 1 # We increase the corresponding counter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ironhack': 1, 's': 1, 'q': 1, 'website': 1, 'is': 1}"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wordfreq"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "count_string = [(key,wordfreq[key]) for key in list(wordfreq.keys())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ironhack', 1), ('s', 1), ('q', 1), ('website', 1), ('is', 1)]"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "count_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package omw-1.4 to\n",
+      "[nltk_data]     C:\\Users\\joana\\AppData\\Roaming\\nltk_data...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from nltk.stem import PorterStemmer, WordNetLemmatizer\n",
+    "import nltk\n",
+    "nltk.download('omw-1.4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +331,36 @@
     "\n",
     "    Returns:\n",
     "        A list of strings after being stemmed and lemmatized.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    \n",
+    "    port = PorterStemmer()\n",
+    "    stem = [(port.stem(word[0]),word[1]) for word in l]\n",
+    "    \n",
+    "    lem = WordNetLemmatizer()\n",
+    "\n",
+    "    stem_lemm = [(lem.lemmatize(word[0]),word[1]) for word in stem]\n",
+    "    \n",
+    "    return stem_lemm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('ironhack', 1), ('s', 1), ('q', 1), ('websit', 1), ('is', 1)]"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stem_and_lemmatize(count_string)"
    ]
   },
   {
@@ -176,7 +378,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nltk.corpus import stopwords"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 's', 'q', 'website', 'is']"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "token_string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +420,31 @@
     "\n",
     "    Returns:\n",
     "        A list of strings after stop words are removed.\n",
-    "    \"\"\""
+    "    \"\"\"\n",
+    "    stop_words = list(stopwords.words('english'))\n",
+    "    \n",
+    "    new_list = [word for word in l if word not in stop_words]\n",
+    "    return new_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['ironhack', 'q', 'website']"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "remove_stopwords(token_string)"
    ]
   },
   {
@@ -204,7 +459,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
